# robolabs_api

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
robolabs_api/: .env.example  __main__.py  api.py  app.py  settings.py
robolabs_api/templates/: base.html  index.html
tests/: test_api.py
